Fishing Treasure Hunter overhaul

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -94,9 +94,9 @@ Fishing.Effect.10=Ryba\u0159en\u00ed v ledu
 Fishing.Effect.11=Umo\u017e\u0148uje v\u00e1m ryba\u0159it v ledov\u00fdch prost\u0159ed\u00edch
 Fishing.Enchant.Chance=[[RED]]\u0160ance na magick\u00e9ho lovce: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] De\u0161\u0165ov\u00fd bonus
-Fishing.ItemFound=[[GRAY]]Nasel si poklad!
+Fishing.Ability.TH.ItemFound=[[GRAY]]Nasel si poklad!
 Fishing.Listener=Rybareni:
-Fishing.MagicFound=[[GRAY]]C\u00edt\u00edte dotek magie s t\u00edmto \u00falovkem...
+Fishing.Ability.TH.MagicFound=[[GRAY]]C\u00edt\u00edte dotek magie s t\u00edmto \u00falovkem...
 Fishing.SkillName=RYBARENI
 Fishing.Skillup=[[YELLOW]]Dovednost v rybareni byla navysena o {0}. Celkem ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]\u0160ance na dvojn\u00e1sobn\u00fd zisk: [[YELLOW]]{0}
