--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -86,9 +86,9 @@ Fishing.Effect.6=Fischer-Mahlzeit
 Fishing.Effect.7=Verbessert Effizienz von geangelter Nahrung
 Fishing.Enchant.Chance=[[RED]]Zauber-J\u00e4ger Chance: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Rain Bonus
-Fishing.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
-Fishing.Listener=Angeln:
-Fishing.MagicFound=[[AQUA]]Dich ber\u00fchrt ein leichter Zauber bei diesem Fang...
+Fishing.Ability.TH.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
+Fishing.Listener=Angeln\: 
+Fishing.Ability.TH.MagicFound=[[AQUA]]Dich ber\u00fchrt ein leichter Zauber bei diesem Fang...
 Fishing.SkillName=ANGELN
 Fishing.Skillup=[[YELLOW]]Angel Skill um {0} gestiegen. Gesamt ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Chance auf Doppel-Drops: [[YELLOW]]{0}
