--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -15,8 +15,8 @@ Excavation.Listener=Kaivuu:
 Excavation.SkillName=KAIVANTO
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**TEHO PORA HAJOITUS AKTIVOITU**
 Excavation.Skillup=[[YELLOW]]Kaivuu taito nousi  {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
-Fishing.ItemFound=[[GRAY]]Treasure found!
-Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Fishing.Ability.TH.ItemFound=[[GRAY]]Treasure found!
+Fishing.Ability.TH.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Herbalism.Ability.GTh=[[GREEN]]**VIHERPEUKALO**
 Herbalism.Listener=Yrttitietous:
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Sinun [[YELLOW]]Viherpeukalo [[GREEN]]taito on latautunut!
