--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -80,9 +80,9 @@ Fishing.Effect.3=Remonte des objets magiques
 Fishing.Effect.4=Secousse (sur monstres)
 Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00eache
 Fishing.Enchant.Chance=[[RED]]Chasse magique: [[YELLOW]]{0}
-Fishing.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
-Fishing.Listener=P\u00eache :
-Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
+Fishing.Ability.TH.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
+Fishing.Listener=P\u00EAche\: 
+Fishing.Ability.TH.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
 Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop: [[YELLOW]]{0}
