--- a/src/main/resources/locale/locale_hu_HU.properties
+++ b/src/main/resources/locale/locale_hu_HU.properties
@@ -24,7 +24,7 @@ Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]A TE [[YELLOW]]Giga B\u00e1n
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] haszn\u00e1latban [[RED]]Giga B\u00e1ny\u00e1sz Cs\u00e1k\u00e1ny!
 Excavation.Skillup=[[YELLOW]]\u00c1s\u00e1s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
 Fishing.Effect.10=J\u00e9g Horg\u00e1szat
-Fishing.ItemFound=[[GRAY]]Kincs megtal\u00e1lva!
+Fishing.Ability.TH.ItemFound=[[GRAY]]Kincs megtal\u00e1lva!
 Fishing.Listener=Horg\u00e1szat:
 Fishing.SkillName=HORG\u00c1SZAT
 Herbalism.Ability.Lower=[[GRAY]]**LETETTED A KAP\u00c1DAT**
