--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -95,9 +95,9 @@ Fishing.Effect.10=Pesca sul Ghiaccio
 Fishing.Effect.11=Ti permette di pescare nei biomi ghiacciati
 Fishing.Enchant.Chance=[[RED]]Possibilit\u00e0 di Cacciatore di Magia: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Bonus Pioggia
-Fishing.ItemFound=[[GRAY]]Hai trovato un tesoro!
+Fishing.Ability.TH.ItemFound=[[GRAY]]Hai trovato un tesoro!
 Fishing.Listener=Pesca:
-Fishing.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
+Fishing.Ability.TH.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
 Fishing.SkillName=PESCA
 Fishing.Skillup=[[YELLOW]]L''abilit\u00e0 Pesca \u00e8 aumentata di {0}. Totale ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Possibilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
