--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -95,9 +95,9 @@ Fishing.Effect.10=\uc5bc\uc74c \ub09a\uc2dc
 Fishing.Effect.11=\uc5bc\uc74c \uc9c0\ud615\uc5d0\uc11c \ub09a\uc2dc\ub97c \ud560 \uc218 \uc788\uac8c \ud574\uc90d\ub2c8\ub2e4.
 Fishing.Enchant.Chance=[[RED]]\ub9c8\ubc95 \ubcf4\ubb3c \uc0ac\ub0e5\uafbc \ud655\ub960: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] \ube44 \ubcf4\ub108\uc2a4
-Fishing.ItemFound=[[GRAY]]\ubcf4\ubb3c\uc744 \ubc1c\uacac\ud588\uc2b5\ub2c8\ub2e4!
+Fishing.Ability.TH.ItemFound=[[GRAY]]\ubcf4\ubb3c\uc744 \ubc1c\uacac\ud588\uc2b5\ub2c8\ub2e4!
 Fishing.Listener=\ub09a\uc2dc:
-Fishing.MagicFound=[[GRAY]]\uc774\ubc88 \ub09a\uc2dc\uc5d0 \ub9c8\ubc95\uc758 \uc190\uae38\uc774 \ub290\uaef4\uc9d1\ub2c8\ub2e4.
+Fishing.Ability.TH.MagicFound=[[GRAY]]\uc774\ubc88 \ub09a\uc2dc\uc5d0 \ub9c8\ubc95\uc758 \uc190\uae38\uc774 \ub290\uaef4\uc9d1\ub2c8\ub2e4.
 Fishing.SkillName=\ub09a\uc2dc
 Fishing.Skillup=[[YELLOW]]\ub09a\uc2dc \uae30\uc220\uc774 {0} \uc99d\uac00\ud558\uc5ec {1}\ub808\ubca8\uc774 \ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 Herbalism.Ability.DoubleDropChance=[[RED]]2\ubc30 \ub4dc\ub78d \ud655\ub960: [[YELLOW]]{0}
