--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -30,9 +30,9 @@ Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREKER GEACTIVEERD**
 Excavation.Skillup=[[YELLOW]]Uitgravings ervaring toegenomen met {0}. Totaal ({1})
 Fishing.Effect.8=Meester Hengelaar
 Fishing.Chance.Raining=[[BLUE]] Regen Bonus
-Fishing.ItemFound=[[GRAY]]Schat gevonden!
+Fishing.Ability.TH.ItemFound=[[GRAY]]Schat gevonden!
 Fishing.Listener=Vissen:
-Fishing.MagicFound=[[GRAY]]Jij voelt een vleugje magie met deze vangst...
+Fishing.Ability.TH.MagicFound=[[GRAY]]Jij voelt een vleugje magie met deze vangst...
 Herbalism.Ability.GTh=[[GREEN]]**GROEN DUIMPJE**
 Herbalism.Effect.10=Hylian Geluk
 Herbalism.Effect.11=Geeft een kleine kans om zeldzame voorwerpen te vinden
