--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -93,9 +93,9 @@ Fishing.Effect.10=Lodowe lowienie ryb
 Fishing.Effect.11=Pozwala na lowienie ryb w zimowych biomach
 Fishing.Enchant.Chance=[[RED]]Szanse na Magicznego \u0141owc\u0119: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Bonus od Deszczu
-Fishing.ItemFound=[[GRAY]]Znaleziono skarb!
+Fishing.Ability.TH.ItemFound=[[GRAY]]Znaleziono skarb!
 Fishing.Listener=Rybactwo
-Fishing.MagicFound=[[GRAY]]Wyczuwasz w pobli\u017cu \u017ar\u00f3d\u0142o magii...
+Fishing.Ability.TH.MagicFound=[[GRAY]]Wyczuwasz w pobli\u017cu \u017ar\u00f3d\u0142o magii...
 Fishing.SkillName=RYBACTWO
 Fishing.Skillup=[[YELLOW]]Umiej\u0119tno\u015b\u0107 \u0142owienia wzros\u0142a o {0}. Razem ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Szansa na Podw\u00f3jny Drop: [[YELLOW]]{0}
