--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -86,9 +86,9 @@ Fishing.Effect.6=Fiskers Diet
 Fishing.Effect.7=Forbedrer Sult genoprettet af Fisked mad
 Fishing.Enchant.Chance=[[RED]]Magi J\u00e6ger Chance: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Regn Bonus
-Fishing.ItemFound=[[GRAY]Du har fundet en skat!
-Fishing.Listener=Fiskeri:
-Fishing.MagicFound=[[GRAY]]Du f\u00f8ler et strejf a magi med denne fangst...
+Fishing.Ability.TH.ItemFound=[[GRAY]Du har fundet en skat!
+Fishing.Listener=Fiskeri\: 
+Fishing.Ability.TH.MagicFound=[[GRAY]]Du f\u00f8ler et strejf a magi med denne fangst...
 Fishing.SkillName=FISKER
 Fishing.Skillup=[[YELLOW]]Fisker evne for\u00f8get med {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]2x Tabs Chance: [[YELLOW]]{0}
