--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -95,9 +95,9 @@ Fishing.Effect.10=Pesca de hielo
 Fishing.Effect.11=Te permite pescar en biomas de hielo
 Fishing.Enchant.Chance=[[RED]]Probabilidad de Cazador M\u00e1gico: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Lluvia de Bonus
-Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
+Fishing.Ability.TH.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
 Fishing.Listener=Pescador: 
-Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
+Fishing.Ability.TH.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
