--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -29,8 +29,8 @@ Excavation.Effect.3=Habilidade de cavar tesouros
 Excavation.Listener=Escava\u00e7\u00e3o:
 Excavation.SkillName=Escava\u00e7\u00e3o
 Excavation.Skillup=[[AMARELO]]Habilidade Escava\u00e7\u00e3o aumentada em {0}. Total ({1})
-Fishing.ItemFound=[[GRAY]]Tesouro encontrado!
-Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Fishing.Ability.TH.ItemFound=[[GRAY]]Tesouro encontrado!
+Fishing.Ability.TH.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=PESCARIA
 Herbalism.Ability.GTh=[[GREEN]]**DED\u00c3O VERDE**
 Herbalism.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA ENXADA**
