--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -15,7 +15,7 @@ Excavation.Listener=Gr\u00e4vning:
 Excavation.SkillName=Gr\u00e4vning
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA BORR KROSSAREN AKTIVERAD**
 Excavation.Skillup=[[YELLOW]]Gr\u00e4vningsf\u00e4rdigheten har \u00f6kat med {0}. Totalt ({1})
-Fishing.ItemFound=[[GRAY]]Skatt hittad!
+Fishing.Ability.TH.ItemFound=[[GRAY]]Skatt hittad!
 Herbalism.Ability.GTh=[[GREEN]]**GR\u00d6NA FINGRAR**
 Herbalism.Listener=V\u00e4xtk\u00e4nnedom:
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Dina[[YELLOW]]Gr\u00f6na fingrar  [[GREEN]]f\u00f6rm\u00e5ga \u00e4r vederkvickad!
