--- a/src/main/resources/locale/locale_zh_TW.properties
+++ b/src/main/resources/locale/locale_zh_TW.properties
@@ -95,9 +95,9 @@ Fishing.Effect.10=\u51b0\u91e3
 Fishing.Effect.11=\u5141\u8a31\u4f60\u5728\u51b0\u5929\u96ea\u5730\u88e1\u91e3\u9b5a
 Fishing.Enchant.Chance=[[RED]]\u9b54\u6cd5\u7375\u4eba\u6a5f\u7387: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] \u5927\u91cf\u734e\u52f5
-Fishing.ItemFound=[[GRAY]]\u767c\u73fe\u5bf6\u7269\u4e86\uff01
+Fishing.Ability.TH.ItemFound=[[GRAY]]\u767c\u73fe\u5bf6\u7269\u4e86\uff01
 Fishing.Listener=\u91e3\u9b5a:
-Fishing.MagicFound=[[GRAY]]\u4f60\u611f\u53d7\u5230\u9b54\u529b\u7684\u6ce2\u52d5...
+Fishing.Ability.TH.MagicFound=[[GRAY]]\u4f60\u611f\u53d7\u5230\u9b54\u529b\u7684\u6ce2\u52d5...
 Fishing.SkillName=\u91e3\u9b5a
 Fishing.Skillup=[[YELLOW]]\u91e3\u9b5a\u6280\u80fd\u4e0a\u5347\u4e86 {0}! \u7e3d\u7b49\u7d1a ({1})!
 Herbalism.Ability.DoubleDropChance=[[RED]]\u96d9\u500d\u6389\u843d\u6a5f\u7387: [[YELLOW]]{0}
