--- a/Changelog.txt
+++ b/Changelog.txt
@@ -60,6 +60,7 @@ Version 1.4.07-dev
  ! Vampirism can now be enabled without having Skill Death Penalty enabled
  ! Admin and Party chat prefixes are now customizable
  ! Changed the color of party leader names in Party chat
+ ! Improved "Tree Feller" algorithm (Thanks Riking!)
  ! Improved profile saving
  ! Improved partial name matcher
  ! Improved update checker
