Update locale files.

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -74,6 +74,7 @@ Excavation.Skillup=[[YELLOW]]Udgravningsevne for\u00f8get med {0}. Total ({1})
 Fishing.Ability.Info=[[RED]]Magisk J\u00e6ger: [[GRAY]] **Forbedres med skattejagts ranken**
 Fishing.Ability.Locked.0=L\u00c5ST INDTIL {0}+ EVNE (RYST)
 Fishing.Ability.Rank=[[RED]]Skatte J\u00e6ger Rank: [[YELLOW]]{0}/5
+Fishing.Ability.TH.MagicRate=[[RED]]Magi J\u00e6ger Chance: [[YELLOW]]{0}
 Fishing.Ability.Shake=[[RED]]Ryste Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fiskers Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Skatte J\u00e6ger (Passiv)
@@ -84,10 +85,9 @@ Fishing.Effect.4=Ryst (Mod V\u00e6sner)
 Fishing.Effect.5=Ryst ting ud af monstre med en fiskestang
 Fishing.Effect.6=Fiskers Diet
 Fishing.Effect.7=Forbedrer Sult genoprettet af Fisked mad
-Fishing.Enchant.Chance=[[RED]]Magi J\u00e6ger Chance: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Regn Bonus
+Fishing.Listener=Fiskeri:
 Fishing.Ability.TH.ItemFound=[[GRAY]Du har fundet en skat!
-Fishing.Listener=Fiskeri\: 
 Fishing.Ability.TH.MagicFound=[[GRAY]]Du f\u00f8ler et strejf a magi med denne fangst...
 Fishing.SkillName=FISKER
 Fishing.Skillup=[[YELLOW]]Fisker evne for\u00f8get med {0}. Total ({1})
@@ -105,7 +105,7 @@ Herbalism.Effect.1=Spred Terra, 3x Tab
 Herbalism.Effect.2=Gr\u00f8nne Fingre (Hvede)
 Herbalism.Effect.3=Auto-Planter afgr\u00f8der mens du h\u00f8ster
 Herbalism.Effect.5=Lav Mursten Mossede, eller f\u00e5 gr\u00e6s til at gro
-Herbalism.Effect.6=Farmer''s Diet
+Herbalism.Effect.6=Farmer\'s Diet
 Herbalism.Effect.7=Forbedrer Sult genoprettet af farmed mad
 Herbalism.Effect.8=Dobble tab (alle planter)
 Herbalism.Effect.9=G\u00f8r din normale udbytte dobblet s\u00e5 stort
@@ -148,8 +148,6 @@ Mining.Blast.Radius.Increase=[[RED]]Eksplosions Radius For\u00f8gelse: [[YELLOW]
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] her brugt [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Spring Mining [[GREEN]]evne er genindl\u00e6st!
-Repair.AnvilPlaced.Spout1=[mcMMO] Ambolt placeret
-Repair.AnvilPlaced.Spout2=H\u00f8jre kilk for at reparere!
 Repair.Effect.0=Reparer
 Repair.Effect.1=Reparer V\u00e6rkt\u00f8jer & Rustning
 Repair.Effect.10=Guld Reparer ({0}+ EVNE)
@@ -344,7 +342,7 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rang [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]M\u00c5L: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rang [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Degraderet
-Commands.mcrefresh.Success=[[RED]]{0}''''s nedk\u00f8ling er blevet genindl\u00e6st.
+Commands.mcrefresh.Success=[[RED]]{0}\'\'s nedk\u00f8ling er blevet genindl\u00e6st.
 Commands.mcremove.Success=[[GREEN]]{0} er succesfuldt fjernet fra databasen!
 Commands.mctop.Tip=[[GOLD]]Tip: Brug [[RED]]/mcrank[[GOLD]] for at se all dine personlige rangs!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u00c6ndrer m\u00e5let
@@ -431,12 +429,8 @@ XPRate.Event=[[GOLD]]mcMMO er lige nu i gang med et XP bed\u00f8mnings begivenhe
 Effects.Effects=Effekter
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]Omkring Akrobatik:\n[[YELLOW]]Akrobatik er kunsten at bev\u00e6ge sig Yndefuld i mcMMO.\n[[YELLOW]]Det giver kamp bonuser og milj\u00f8 skades bonuser\n[[DARK_AQUA]]F\u00e5 XP:\n[[YELLOW]]For at f\u00e5 XP med denne evne, er du n\u00f8dt til at ud\u00f8ve pareringer\n[[YELLOW]]i kamp eller ved at overleve h\u00f8je fald som skader dig.\n[[DARK_AQUA]]Hvordan virker \"Rul\"?\n[[YELLOW]]Du har en deffensiv chance n\u00e5r du tager fald skader\n[[YELLOW]]for at vende skaden sket. Du kan golde sneak knappen for at\n[[YELLOW]]fordoble dine chancer n\u00e5r du falder.\n[[YELLOW]]Dette starter det Yndefulde Rul i stedet for den normale.\n[[YELLOW]]Yndefulde rul er ligesom normale rul, men de har dobblet s\u00e5 stor\n[[YELLOW]]sandsynlighed for at ske, og give mere skade sikkerhed end normale rul.\n[[YELLOW]]Rulle chancer er bundet til dit Evne level\n[[DARK_AQUA]]Hvordan virker Parer?\n[[YELLOW]]Parer er en deffensiv Chance n\u00e5r du er\n[[YELLOW]]skadet i skadet i kamp for at mindske skader.\n[[YELLOW]]Det er bundet til dine Evne levels.
-Guides.Axes=Vejledning kommer snart...
 Guides.Available=[[DARK_AQUA]]Guide for {0} tilg\u00e6ngelige - skriv /{1} ? [page]
-Guides.Excavation=[[DARK_AQUA]]Omkring Udgravning:\n[[YELLOW]]Udgraving er kunsten at grave jord op for at finde skatte.\n[[YELLOW]]Ved at Udgrave jorden vil du finde skatte.[[YELLOW]]Jo mere du g\u00f8r dette, desto flere skattte vil du finde.\n\n[[DARK_AQUA]]OPN\u00c5 XP:\n[[YELLOW]]For at f\u00e5 XP i denne skill, skal du grave med en skovl i h\u00e5nden.\n[[YELLOW]]Kun bestemte materialer kan graves op for at f\u00e5 skatte og XP\n[[DARK_AQUA]]Kompatible Materialer:\n[[YELLOW]]Gr\u00e6s, Jord, Sand, Ler, Grus, Svampev\u00e6v, Sj\u00e6lesand\n\n[[DARK_AQUA]]S\u00e5dan bruger du Giga Borer:\n[[YELLOW]]Med en skovl i h\u00e5nden h\u00f8jre klikker du for at klarg\u00f8re dit redskab\n[[YELLOW]]S\u00e5 snart den nedt\u00e6ller, har du 4 sekunder til at f\u00e5\n[[YELLOW]]kontakt med Udgravnings brugbare materialer, dette vil\n[[YELLOW]]aktivere Giga Borer.\n[[DARK_AQUA]]Hvad er Giga Borer?\n[[YELLOW]]Giga Borer er en evne med en nedk\u00f8lning\n[[YELLOW]]bundet til Udgravnings Skill. Den tredobler din chance\n[[YELLOW]]for at finde skatte og aktiverer omg\u00e5ende \u00f8del\u00e6ggelse\n[[YELLOW]]af Udgravnings materialer.\n\n[[DARK_AQUA]]Hvordan fungerer Skatte Jager?\n[[YELLOW]]Alle mulige skatte for Udgravning har sit eget\n[[YELLOW]]Skill levels krav som den skal give, som et resultat\n[[YELLOW]]er det sv\u00e6rt at sige hvor meget det hj\u00e6lper dig.\n[[YELLOW]]Bare husk at jo h\u00f8jere dit Udgravnings Skill\n[[YELLOW]]er, jo flere skatte kan findes.\n[[YELLOW]]Husk ogs\u00e5 p\u00e5 at hver type af Udgravnings\n[[YELLOW]]kompatible materialer har sin egen unikke liste af skatte.\n[[YELLOW]]Med andre ord, du vil finde en slags skat i Jord\n[[YELLOW]]og en anden i Grus.\n[[DARK_AQUA]]Noteringer omkring Udgravning:\n[[YELLOW]]Udgravnings blokkenes drops kan tilpasses som du vil\n[[YELLOW]]S\u00e5 resultater kan variere fra server til server.
 Guides.Header=[[GOLD]]-=[[GREEN]]{0} Guide[[GOLD]]=-
-Guides.Mining=[[DARK_AQUA]]Omkring Mining:\n[[YELLOW]]Mining best\u00e5r af at mine sten og mineraler. Det giver bonuser\n[[YELLOW]]til m\u00e6ngden af minede materialer mens du miner.\n[[DARK_AQUA]]F\u00e5 XP:\n[[YELLOW]]for at f\u00e5 XP i denne evne, skal du mine med en hakke i h\u00e5nden.\n[[YELLOW]]Kun visse blokke giver XP.\n[[DARK_AQUA]]Compatible Materialer:\n[[YELLOW]]Sten, Kul Malm, Jern Malm, Guld Malm, Diamant Malm, R\u00f8dstens Malm,\n[[YELLOW]]Lapis Malm, Obsidian, Mossten, Endesten,\n[[YELLOW]]Gl\u00f8desten og Nether Sten.\n[[DARK_AQUA]]S\u00e5dan bruger du Super \u00d8del\u00e6gger:\n[[YELLOW]]Med en hakke i din h\u00e5nd, h\u00f8jre klik for at g\u00f8re det klar.\n[[YELLOW]]S\u00e5 snart du har klikket, har du ca. 4 sekunder til at starte kontakten\n[[YELLOW]]ved at mine kompatible materialer, hvilket vil aktivere Super\n[[YELLOW]]\u00d8del\u00e6gger.\n[[DARK_AQUA]]Hvad er Super \u00d8del\u00e6gger?\n[[YELLOW]]Super \u00d8del\u00e6gger er en evne med en nedk\u00f8ling, bundet til Mining\n[[YELLOW]]Evne. den tredobler din chance for at f\u00e5 ekstra objekter til at falde, og\n[[YELLOW]]aktiverer direkte \u00f8del\u00e6ggelse p\u00e5 Mining meterialer.\n[[DARK_AQUA]]S\u00e5dan bruger du Blast Mining:\n[[YELLOW]]Med en detonator i h\u00e5nden, hvilket er flint og st\u00e5l som standard,\n[[YELLOW]]krybe og h\u00f8jre-klikke p\u00e5 TNT fra afstand. Dette vil f\u00e5 TNTen\n[[YELLOW]]til at eksplodere med det samme.\n[[DARK_AQUA]]Hvordan virker Blast Mining?\n[[YELLOW]]Blast Mining er en evne med en nedk\u00f8ling bundet til Mining\n[[YELLOW]]evnen. Den giver bonuser n\u00e5r du miner med TNT og tillader dig\n[[YELLOW]]at fjernstyrings Detonere TNT. Der er tre dele af Blast Mining.\n[[YELLOW]]Den f\u00f8rste del er St\u00f8rre Bomber, hvilket forst\u00f8rrer eksplosions radius.\n[[YELLOW]]Anden del er Nedrivnings Experten, hvilket neds\u00e6tter spiller skade\n[[YELLOW]]fra TNT eksplosioner. Tredje del forst\u00f8rrer meget simpelt\n[[YELLOW]]m\u00e6ngden af mineraler givet fra TNT og neds\u00e6tter\n[[YELLOW]]byggeaffaldet.
 Guides.Page.Invalid=Ikke et gyldigt side nummer!
 Guides.Usage=[[RED]] Korrekt brug er /{0} ? [page]
 Inspect.Offline=[[RED]] Du har ikke tilladelse til at inspicere offline spillere!
@@ -466,24 +460,9 @@ Perks.Cooldowns.Desc=Sk\u00e6rer Nedk\u00f8lings tiden ned med {0}.
 Perks.ActivationTime.Name=Udholdenhed
 Perks.ActivationTime.Desc=Forl\u00e6nger evne aktivations tid med {0} sekunder
 Perks.ActivationTime.Bonus=[[GOLD]] ({0}s med Udholdenheds Frynsegode)
-Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] havde ikke evner nom til at give dig nogen viden.
-Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du har stj\u00e5let [[BLUE]]{0}[[DARK_AQUA]] levels fra [[YELLOW]]{1}.
-Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] var ikke i stand til at stj\u00e6le viden fra dig!
-Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] har stj\u00e5let [[BLUE]]{1}[[DARK_RED]] levels fra dig!
-Spout.Donate=[[YELLOW]][mcMMO] Doner!
-Spout.LevelUp.1=[[GREEN]Level Op!
-Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
-Spout.Menu.Exit=[[GRAY]]Tryk p\u00e5 ESCAPE for at forlade!
-Spout.Menu.ExitButton=UDGANG
-Spout.Menu.HudButton.1=HUD Type: {0}
-Spout.Menu.HudButton.2=Du skal \u00e6ndre din HUD!
-Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
-Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
 MOTD.Donate=[[DARK_AQUA]]Donations Info:
-MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampyr aktiveret.
-MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Evne d\u00f8ds straf: [[DARK_RED]]{0}%
-MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore aktiveret.
+MOTD.Hardcore.DeathStatLoss.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Evne d\u00f8ds straf: [[DARK_RED]]{0}%
+MOTD.Hardcore.Vampirism.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]Vampyr Statistik Igle: [[DARK_RED]]{0}%
 MOTD.PerksPrefix=[[RED]][mcMMO Frynsegoder]
-MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]Vampyr Statistik Igle: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] K\u00f8rer version [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Hjemmeside
