--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -74,6 +74,7 @@ Excavation.Skillup=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
 Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Treasure Hunter Rank: [[YELLOW]]{0}/5
+Fishing.Ability.TH.MagicRate=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Treasure Hunter (Passive)
@@ -84,10 +85,9 @@ Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Rain Bonus
-Fishing.Ability.TH.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing:
+Fishing.Ability.TH.ItemFound=[[GRAY]]Treasure found!
 Fishing.Ability.TH.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
@@ -148,8 +148,6 @@ Mining.Blast.Radius.Increase=[[RED]] Chwyth Cynnydd Radiws [[YELLOW]] {0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]] Eich [[YELLOW]] Mwyngloddio Chwyth [[GREEN]] gallu ei hadnewyddu!
-Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
-Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=Repair
 Repair.Effect.1=Repair Tools & Armor
 Repair.Effect.10=Gold Repair ({0}+ SKILL)
@@ -430,12 +428,8 @@ XPRate.Event=[[GOLD]] mcMMO ar hyn o bryd mewn digwyddiad gyfradd XP! Gyfradd yn
 Effects.Effects=EFFEITHIAU
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
-Guides.Axes=[[DARK_AQUA]]About Axes:\n[[YELLOW]]With the Axes skill you can use your axe for much more then\n[[YELLOW]]just deforesting! You can hack and chop away at mobs\n[[YELLOW]]and players to gain XP, hitting mobs with the effect of\n[[YELLOW]]knockback and inflicting DEADLY criticals on mobs and players.\n[[YELLOW]]Your axe also becomes a hand-held woodchipper,\n[[YELLOW]]breaking down the enemy\'s armor with ease as your level\n[[YELLOW]]increases.\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need hit other mobs or players\n[[YELLOW]]with an Axe.\n\n[[DARK_AQUA]]How does Skull Splitter work?\n[[YELLOW]]This ability allows you to deal an AoE (Area of Effect) hit.\n[[YELLOW]]This AoE hit will deal half as much damage as you did to the\n[[YELLOW]]main target, so it\'s great for clearing out large piles of mobs.\n[[DARK_AQUA]]How does Critical Strikes work?\n[[YELLOW]]Critical Strikes is a passive ability which gives players a\n[[YELLOW]]chance to deal additional damage.\n[[YELLOW]]With the default settings, every 2 skill levels in Axes awards a\n[[YELLOW]]0.1% chance to deal a Critical Strike, causing 2.0 times damage\n[[YELLOW]]to mobs or 1.5 times damage against other players.\n\n\n[[DARK_AQUA]]How does Axe Mastery work?\n[[YELLOW]]Axe Mastery is a passive ability that will add additional damage\n[[YELLOW]]to your hits when using Axes.\n[[YELLOW]]By default, the bonus damage increases by 1 every 50 levels,\n[[YELLOW]]up to a cap of 4 extra damage at level 200.\n\n\n\n[[DARK_AQUA]]How does Armor Impact work?\n[[YELLOW]]Strike with enough force to shatter armor!\n[[YELLOW]]Armor Impact has a passive chance to damage your\n[[YELLOW]]opponent\'s armor. This damage increases as you level in Axes.\n\n\n\n\n[[DARK_AQUA]]How does Greater Impact work?\n[[YELLOW]]You have a passive chance to achieve a greater impact when\n[[YELLOW]]hitting mobs or players with your axe.\n[[YELLOW]]By default this chance is 25%. This passive ability has an\n[[YELLOW]]extreme knockback effect, similar to the Knockback II\n[[YELLOW]]enchantment. In addition, it deals bonus damage to the target.
 Guides.Available=[[DARK_AQUA]]Guide for {0} available - type /{1} ? [page]
-Guides.Excavation=[[DARK_AQUA]] Amdanom Cloddio:\n[[YELLOW]] Cloddio yn y weithred o gloddio hyd faw i ddod o hyd drysorau.\n[[YELLOW]] Trwy gloddio y tir y byddwch yn dod o hyd i drysorau.\n[[YELLOW]] Po fwyaf y byddwch yn gwneud hyn y trysorau mwy gallwch ddod o hyd.\n[[DARK_AQUA]] Profiad Ennill:\n[[YELLOW]] I ennill XP yn y sgil mae\'n rhaid i chi gloddio \u00e2 rhaw mewn llaw.\n[[YELLOW]] Dim ond rhai deunyddiau yn cael ei godi am drysorau ac XP.\n[[DARK_AQUA]] Deunyddiau Cyt\u00fbn:\n[[YELLOW]] Tywod Soul Glaswellt, Baw, Tywod, Clay, Gravel, myseliwm,\n[[DARK_AQUA]] Sut i ddefnyddio Torri\'r Drill Giga:\n[[YELLOW]] Gyda rhaw yn llaw dde glicio i yn barod i\'ch offeryn.\n[[YELLOW]] Unwaith yn y cyflwr hwn sydd gennych am 4 eiliad i wneud\n[[YELLOW]] cysylltiad \u00e2 gwaith cloddio deunyddiau sy\'n gydnaws bydd hyn yn\n[[YELLOW]] Activate Torri\'r Drill Giga.\n[[DARK_AQUA]] Beth yw Torri\'r Drill Giga?\n[[YELLOW]] Drill Giga Torri\'r yn gallu gyda cooldown\n[[YELLOW]] ynghlwm wrth sgiliau Cloddio. Mae\'n deirgwaith eich cyfle\n[[YELLOW]] o ddod o hyd i drysorau ac yn galluogi toriad sydyn\n[[YELLOW]] ar ddeunyddiau Cloddio.\n[[DARK_AQUA]] Sut mae Drysor Hunter gweithio?\n[[YELLOW]] Bob trysor posibl ar gyfer cloddio wedi ei hun\n[[YELLOW]] sgiliau lefel ofynnol iddo ollwng, o ganlyniad, mae\'n\n[[YELLOW]] anodd dweud faint y mae\'n ei helpu chi.\n[[YELLOW]] Dim ond yn cadw mewn cof bod yr uwch eich sgiliau Cloddio\n[[YELLOW]] yw, y trysorau yn fwy y gellir ei weld.\n[[YELLOW]] A hefyd yn cadw mewn cof bod pob math o Cloddio\n[[YELLOW]] deunydd gydnaws ei restr unigryw ei hun o drysorau.\n[[YELLOW]] Mewn geiriau eraill y byddwch yn dod o hyd i drysorau gwahanol yn Baw\n[[YELLOW]] nag y byddech yn Gravel.\n[[DARK_AQUA]] Nodiadau am Cloddio:\n[[] YELLOW] diferion Cloddio yn hollol customizeable\n[[YELLOW]] Felly canlyniadau yn amrywio gweinydd \u00e2\'r gweinydd.
 Guides.Header=[[GOLD]]-=[[GREEN]]{0} Guide[[GOLD]]=-
-Guides.Mining=[[DARK_AQUA]] Amdanom Mwyngloddio\n[[YELLOW]] Mwyngloddio yn cynnwys cerrig a mwyngloddio mwynau.\u00a0Mae\'n darparu taliadau bonws\n[[YELLOW]] i faint o ddeunyddiau gollwng wrth gloddio.\n\n[[DARK_AQUA]] profiad a gafwyd\n[[YELLOW]] I ennill XP yn y sgil, rhaid i chi gloddio gyda pickaxe mewn llaw.\n[[YELLOW]] Dim ond rhai blociau wobr XP.\n\n[[DARK_AQUA]] Deunyddiau Cyd-fynd\n[[YELLOW]] Cerrig, Mwyn Glo, Haearn Mwyn, Mwyn Aur, Diemwnt Mwyn, Redstone Mwyn,\n[[YELLOW]] Lapis Mwyn, Obsidian, Mossy cobl Cerrig, Ender Cerrig,\n[[YELLOW]], carreg Glow ac Uffern Cerrig.\n\n[[DARK_AQUA]] Sut i ddefnyddio Torri\'r Super\n[[YELLOW]] Gyda pickaxe yn eich llaw, dde chlecia at barod eich offeryn.\n[[YELLOW]] Unwaith yn y cyflwr hwn, mae gennych tua 4 eiliad i gysylltu\n[[YELLOW]] gyda deunyddiau Mwyngloddio cydnaws, a fydd yn activate Super\n[[YELLOW]] Torri\'r.\n\n[[DARK_AQUA]] Beth yw Super Torri\'r?\n[[YELLOW]] Super Torri\'r yn gallu gyda cooldown ynghlwm wrth y Mwyngloddio\n[[YELLOW]] sgiliau.\u00a0Mae\'n treblu\'r eich cyfle o eitemau ychwanegol ollwng a\n[[YELLOW]] yn galluogi egwyl yn syth ar ddeunyddiau Mwyngloddio.\n\n[[DARK_AQUA]] Sut i ddefnyddio Mwyngloddio Blast\n[[YELLOW]] Gyda ffrwydrwr mewn llaw, sy\'n dur fflint at ball,\n[[YELLOW]] de-gliciwch ar TNT o bellter.\u00a0Bydd hyn yn achosi i\'r TNT\n[[YELLOW]] i ffrwydro ar unwaith.\n\n[[DARK_AQUA]] Sut mae Mwyngloddio Chwyth?\n[[YELLOW]] Mwyngloddio Blast yn gallu gyda cooldown ynghlwm wrth y Mwyngloddio\n[[YELLOW]] sgiliau.\u00a0Mae\'n rhoi taliadau bonws wrth cloddio \u00e2 TNT ac yn caniat\u00e1u i chi\n[[YELLOW]] i anghysbell ffrwydro TNT.\u00a0Mae tair rhan i Blast Mwyngloddio.\n[[YELLOW]] Mae\'r rhan gyntaf yn Bomiau Bigger, sy\'n cynyddu\'r radiws chwyth.\n[[YELLOW]] Yr ail yw Dymchweliadau Arbenigol, sy\'n lleihau difrod\n[[YELLOW]] o ffrwydradau TNT.\u00a0Mae\'r drydedd ran yn syml yn cynyddu\'r\n[[YELLOW]] swm y mwynau gostwng o TNT a lleihau\'r\n[[YELLOW]] malurion gollwng.
 Guides.Page.Invalid=Not a valid page number!
 Guides.Usage=[[RED]] Usage is /{0} ? [page]
 Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
@@ -465,23 +459,9 @@ Perks.Cooldowns.Desc=Cuts cooldown duration by {0}.
 Perks.ActivationTime.Name=Endurance
 Perks.ActivationTime.Desc=Increases ability activation time by {0} seconds.
 Perks.ActivationTime.Bonus=[[GOLD]] ({0}s with Endurance Perk)
-Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
-Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
-Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
-Spout.Donate=[[YELLOW]][mcMMO] Donate!
-Spout.LevelUp.1=[[GREEN]Level Up!
-Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
-Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
-Spout.Menu.ExitButton=EXIT
-Spout.Menu.HudButton.1=HUD Type: {0}
-Spout.Menu.HudButton.2=Change your HUD style!
-Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
-Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
 MOTD.Donate=[[DARK_AQUA]]Donation Info:
-MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
-MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
-MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
+MOTD.Hardcore.DeathStatLoss.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
+MOTD.Hardcore.Vampirism.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
 MOTD.PerksPrefix=[[RED]][mcMMO Perks]
-MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
