--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -74,6 +74,7 @@ Excavation.Skillup=[[YELLOW]]Graben Skill um {0} gestiegen. Gesamt ({1})
 Fishing.Ability.Info=[[RED]]Zauber-J\u00e4ger: [[GRAY]] **Verbessert sich mit Schatz-J\u00e4ger Rang**
 Fishing.Ability.Locked.0=GESPERRT bis Skill Skill {0}+ (Reissen)
 Fishing.Ability.Rank=[[RED]]Schatz-J\u00e4ger Rang: [[YELLOW]]{0}/5
+Fishing.Ability.TH.MagicRate=[[RED]]Zauber-J\u00e4ger Chance: [[YELLOW]]{0}
 Fishing.Ability.Shake=[[RED]]Reissen-Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fischer-Mahlzeit Rang: [[YELLOW]]{0}
 Fishing.Effect.0=Schatz-J\u00e4ger (Passiv)
@@ -84,10 +85,9 @@ Fishing.Effect.4=Reissen (vs. Dinge)
 Fishing.Effect.5=Reisse per Angel Gegenst\u00e4nde aus den Mobs
 Fishing.Effect.6=Fischer-Mahlzeit
 Fishing.Effect.7=Verbessert Effizienz von geangelter Nahrung
-Fishing.Enchant.Chance=[[RED]]Zauber-J\u00e4ger Chance: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Rain Bonus
+Fishing.Listener=Angeln:
 Fishing.Ability.TH.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
-Fishing.Listener=Angeln\: 
 Fishing.Ability.TH.MagicFound=[[AQUA]]Dich ber\u00fchrt ein leichter Zauber bei diesem Fang...
 Fishing.SkillName=ANGELN
 Fishing.Skillup=[[YELLOW]]Angel Skill um {0} gestiegen. Gesamt ({1})
@@ -154,8 +154,6 @@ Mining.Blast.Radius.Increase=[[RED]]Z\u00fcndstoff Radius Erh\u00f6hung: [[YELLO
 Mining.Blast.Rank=[[RED]]Z\u00fcndstoff Rang:[[YELLOW]] {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] benutzte [[RED]]Z\u00fcndstoff!
 Mining.Blast.Refresh=[[GREEN]]Dein [[YELLOW]]Z\u00fcndstoff [[GREEN]]ist wieder bereit!
-Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
-Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=Reparatur
 Repair.Effect.1=Repariere Werkzeuge & R\u00fcstung
 Repair.Effect.10=Gold Reparatur ({0}+ SKILL)
@@ -284,6 +282,7 @@ Unarmed.Effect.4=Eiserner Arm
 Unarmed.Effect.5=Verh\u00e4rtet deinen Arm einige Zeit
 Unarmed.Effect.6=Pfeil-Ablenkung
 Unarmed.Effect.7=Lenkt Pfeile ab
+Unarmed.Effect.8=Eisen Griff
 Unarmed.Listener=Unbewaffnet:
 Unarmed.SkillName=UNBEWAFFNET
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserker ausgelaufen**
@@ -413,7 +412,7 @@ Party.Password.Set=[[GREEN]]Gruppen-Password ge\u00e4ndert zu: {0}
 Party.Player.Invalid=[[RED]]Dies ist kein g\u00fcltiger Spieler.
 Party.Teleport.Dead=[[RED]]Du kannst dich nicht zu toten Spielern teleportieren
 Party.Teleport.Player=[[GREEN]]Du wurdest zu {0} teleportiert.
-Party.Teleport.Self=[[RED]]You can''t teleport to yourself!
+Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir teleportiert.
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
 Party.Disband=[[GRAY]]Deine Gruppe wurde aufgel\u00f6st
@@ -448,17 +447,12 @@ Effects.Effects=EFFEKTE
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Parent=[[GOLD]]{0} -
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]\u00dcber Akrobatik:\n[[YELLOW]]Akrobatik ist die Kunst, sich in mcMMO anmutig zu bewegen.\n[[YELLOW]]Es bietet Kampf- und Umgebungsschaden-Boni.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]Um XP in diesem Skill zu bekommen, musst du im Kapf Ausweichen\n[[YELLOW]]oder St\u00fcrze aus grosser H\u00f6he \u00fcberlebe.\n\n[[DARK_AQUA]]Wie funktioniert Abrollen?\n[[YELLOW]]Du hast eine passive Chance Fallschaden zu negieren.\n[[YELLOW]]W\u00e4hrend du f\u00e4llst, kannst du dich b\u00fccken um\n[[YELLOW]]um die Chancen zu verdoppeln!\n[[YELLOW]]Dies l\u00f6st eine grazi\u00f6se Rolle aus anstatt einer Normalen.\n[[YELLOW]]Grazi\u00f6se Rollen sind wie Normale, haben aber die doppelte Chance\n[[YELLOW]]ausgel\u00f6st zu werden und bieten mehr Sicherheit gegen Schaden.\n[[YELLOW]]Die Chance auf Abrollen ist an dein Skill-Level gebunden.\n[[DARK_AQUA]]Wie funktionier Ausweichen?\n[[YELLOW]]Ausweichen bietet eine passive Chance auf halben Schaden\n[[YELLOW]]falls du im  Kampf verletzt wirst.\n[[YELLOW]]Ausweichen ist an dein Skill-Level gebunden.
-Guides.Axes=[[DARK_AQUA]]About Axes:\n[[YELLOW]]With the Axes skill you can use your axe for much more then\n[[YELLOW]]just deforesting! You can hack and chop away at mobs\n[[YELLOW]]and players to gain XP, hitting mobs with the effect of\n[[YELLOW]]knockback and inflicting DEADLY criticals on mobs and players.\n[[YELLOW]]Your axe also becomes a hand-held woodchipper,\n[[YELLOW]]breaking down the enemy''s armor with ease as your level\n[[YELLOW]]increases.\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need hit other mobs or players\n[[YELLOW]]with an Axe.\n\n[[DARK_AQUA]]How does Skull Splitter work?\n[[YELLOW]]This ability allows you to deal an AoE (Area of Effect) hit.\n[[YELLOW]]This AoE hit will deal half as much damage as you did to the\n[[YELLOW]]main target, so it''s great for clearing out large piles of mobs.\n[[DARK_AQUA]]How does Critical Strikes work?\n[[YELLOW]]Critical Strikes is a passive ability which gives players a\n[[YELLOW]]chance to deal additional damage.\n[[YELLOW]]With the default settings, every 2 skill levels in Axes awards a\n[[YELLOW]]0.1% chance to deal a Critical Strike, causing 2.0 times damage\n[[YELLOW]]to mobs or 1.5 times damage against other players.\n\n\n[[DARK_AQUA]]How does Axe Mastery work?\n[[YELLOW]]Axe Mastery is a passive ability that will add additional damage\n[[YELLOW]]to your hits when using Axes.\n[[YELLOW]]By default, the bonus damage increases by 1 every 50 levels,\n[[YELLOW]]up to a cap of 4 extra damage at level 200.\n\n\n\n[[DARK_AQUA]]How does Armor Impact work?\n[[YELLOW]]Strike with enough force to shatter armor!\n[[YELLOW]]Armor Impact has a passive chance to damage your\n[[YELLOW]]opponent''s armor. This damage increases as you level in Axes.\n\n\n\n\n[[DARK_AQUA]]How does Greater Impact work?\n[[YELLOW]]You have a passive chance to achieve a greater impact when\n[[YELLOW]]hitting mobs or players with your axe.\n[[YELLOW]]By default this chance is 25%. This passive ability has an\n[[YELLOW]]extreme knockback effect, similar to the Knockback II\n[[YELLOW]]enchantment. In addition, it deals bonus damage to the target.
 Guides.Available=[[DARK_AQUA]]Guide for {0} available - type /{1} ? [page]
-Guides.Excavation=[[DARK_AQUA]]\u00dcber Graben:\n[[YELLOW]]Graben ist die Kunst, beim Graben im Dreck Sch\u00e4tze zu finden.\n[[YELLOW]]Beim Ausgraben kannst du Sch\u00e4tze finden.\n[[YELLOW]]Um so mehr du gr\u00e4bst, um so mehr Sch\u00e4tze findest du.\n\n[[DARK_AQUA]]XP Zuwachs:\n[[YELLOW]]Um XP in diesem Skill zu bekommen, musst du mit einer Schaufel in der Hand buddeln.\n[[YELLOW]]Nur das Ausgraben von bestimmten Materialen bietet Sch\u00e4tze und XP.\n[[DARK_AQUA]]Materialien:\n[[YELLOW]]Grass, Dreck, Sand, Lehm, Kies, Myzel & Seelensand\n\n[[DARK_AQUA]]Nutzung des Giga-Bohrer:\n[[YELLOW]]Rechtsklicke mit einer Schaufel in deiner Hand um dich zu vorzubereiten.\n[[YELLOW]]Bist zu vorbereitet, hast du 4 Sekunden um\n[[YELLOW]]um im geeigneten Material mit dem Graben zu beginnen, dies\n[[YELLOW]]aktiviert den Gigabohrer.\n[[DARK_AQUA]]Was macht der Giga-Bohrer?\n[[YELLOW]]Der Giga-Bohrer ist eine F\u00e4higkeit mit Abklingzeit,\n[[YELLOW]]welche an den Graben Skill gebunden ist. Sie verdreifacht die Chance\n[[YELLOW]]Sch\u00e4tze zu finden und aktiviert Instant-Abbau\n[[YELLOW]]von ausgrabbaren Materialien.\n\n[[DARK_AQUA]]Wie funktioniert Schatz-J\u00e4ger?\n[[YELLOW]]Jeder verf\u00fcgbare Schatz beim Graben hat seine eigene\n[[YELLOW]]Skill Level Anferderungen um zu droppen, wo diese jeweils liegen\n[[YELLOW]]w\u00e4re zu schwierig um sie hier zu nennen.\n[[YELLOW]]Behalte dir einfach, dass je h\u00f6her dein Skill im Graben,\n[[YELLOW]]desto mehr Sch\u00e4tze kannst du finden.\n[[YELLOW]]Zudem hat jedes Material seine eigene, einzigartige \n[[YELLOW]]Liste an findbaren Sch\u00e4tzen.\n[[YELLOW]]In anderen Worten, du wirst in Erde andere Sch\u00e4tze als in Kies finden.\n[[DARK_AQUA]]Infos \u00fcber Graben:\n[[YELLOW]]Graben ist komplett anpassbar, somit sind die Sch\u00e4tze\n[[YELLOW]]und XP von Server zu Server unterschiedlich!
 Guides.Header=[[GOLD]]-=[[GREEN]]{0} Guide[[GOLD]]=-
-Guides.Herbalism=[[DARK_AQUA]]Pflanzenkunde:\n[[YELLOW]]Herbalism is about collecting herbs and plants.\n\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]Collect plants and herbs.\n\n\n[[DARK_AQUA]]Compatible Blocks\n[[YELLOW]]Wheat, Potatoes, Carrots, Melons,\n[[YELLOW]]Pumpkins, Sugar Canes, Cocoa Beans, Flowers, Cacti, Mushrooms,\n[[YELLOW]]Nether Wart, Lily Pads, and Vines.\n\n\n\n\n[[DARK_AQUA]]How does Green Terra work?\n[[YELLOW]]Green Terra is an active ability, you can right-click\n[[YELLOW]]while holding a hoe to activate Green Terra.\n[[YELLOW]]Green Terra grants players a chance to get 3x drops from\n[[YELLOW]]harvesting plants. It also gives players the ability to\n[[YELLOW]]spread life into blocks and transform them using seeds\n[[YELLOW]]from your inventory.\n\n[[DARK_AQUA]]How does Green Thumb (Crops) work?\n[[YELLOW]]This passive ability will automatically replant crops when\n[[YELLOW]]harvesting.\n[[YELLOW]]Your chance of success depends on your Herbalism skill.\n[[DARK_AQUA]]How does Green Thumb (Cobble/Stone Brick/Dirt) work?\n[[YELLOW]]This active ability allows you to turn blocks into their\n[[YELLOW]]\"plant-related\" counterparts. You can do this by right-clicking\n[[YELLOW]]a block, while holding seeds. This will consume 1 seed.\n[[DARK_AQUA]]How does Farmer''s Diet work?\n[[YELLOW]]This passive skill increases the amount of hunger restored\n[[YELLOW]]when eating Bread, Cookies, Melons, Mushroom Soup, Carrots,\n[[YELLOW]]and Potatoes.\n[[DARK_AQUA]]How does Hylian Luck work?\n[[YELLOW]]This passive ability gives you a chance to find rare items\n[[YELLOW]]when certain blocks are broken with a sword.\n[[DARK_AQUA]]How do Double Drops work?\n[[YELLOW]]This passive ability gives players more yield from their\n[[YELLOW]]harvests.
-Guides.Mining=[[DARK_AQUA]]\u00dcber Bergbau:\n[[YELLOW]]Bergbau beinhaltet das Abbauen von Steinen und Erzen. Es bietet Boni\n[[YELLOW]]auf die Anzahl der Drops beim Abbau.\n\n[[DARK_AQUA]]XP Zuwachs:\n[[YELLOW]]Um XP in diesem Skill zu bekommen XP, musst du mit einer Spitzhacke in der Hand abbauen.\n[[YELLOW]]Nur bestimmte Materialien gew\u00e4hren XP.\n\n[[DARK_AQUA]]Kompatible Materialien:\n[[YELLOW]]Stein, Kogleerz, Eisenerz, Gilderz, Diemanterz, Redstoneerz,\n[[YELLOW]]Lapiserz, Obsidian, Moosiger Pflasterstein, Endstein,\n[[YELLOW]]Glowstone und Netherstein.\n\n[[DARK_AQUA]]Super-Brecher benutzen:\n[[YELLOW]]Rechtsklicke mit einer Spitzhacke in deiner Hand um dich zu vorzubereiten.\n[[YELLOW]]Bist zu vorbereitet, hast du 4 Sekunden um\n[[YELLOW]]um im geeigneten Material mit dem Abbau zu beginnen, dies\n[[YELLOW]]aktiviert den Super-Brecher.\n\n[[DARK_AQUA]]Was ist der Super-Brecher?\n[[YELLOW]]Der Super-Brecher ist eine F\u00e4higkeit mit Abklingzeit, welche an\n[[YELLOW]]den Bergbau Skill gebunden ist. Sie bitet die Chance\n[[YELLOW]]auf dreifach Drops und aktiviert Instant-Abbau von abbaubaren Materialien.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]Funktion von Z\u00fcndstoff?\n[[YELLOW]]Z\u00fcndstoff ist eine F\u00e4higkeit mit Abklingzeit, welche an den Bergbauskill gebunden ist.\n[[YELLOW]]Sie vergibt Boni, falls mit TNT Abgebaut wird und erlaubt\n[[YELLOW]]TNT aus Entfernung zu z\u00fcnden. Z\u00fcndstoff besteht aus 3 Teilen.\n[[YELLOW]]Teil 1 ist Sprengmeister, welcher den Sprengradius erh\u00f6ht.\n[[YELLOW]]Teil 2 ist Explosions-Experte, welcher den Schaden von\n[[YELLOW]]TNT Explosionen minimiert. Teil 3 erh\u00f6ht einfach\n[[YELLOW]]die Anzahl von gefundenen Erzen und minimiert dabei den Schutt.
 Guides.Page.Invalid=Not a valid page number!
 Guides.Page.OutOfRange=Diese Seite existiert nicht, es gibt insgesamt nur {0} Seiten.
-Guides.Smelting=Kommt d\u00e4mn\u00e4chst
 Guides.Usage=[[RED]] Usage is /{0} ? [page]
+Guides.Smelting.Section.0=Kommt d\u00e4mn\u00e4chst
 Inspect.Offline=[[RED]]Du hast keine Rechte um ausgeloggte Spieler zu inspizieren!
 Inspect.OfflineStats=mcMMO Werte f\u00fcr ausgeloggte Spieler [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Werte f\u00fcr [[YELLOW]]{0}
@@ -487,26 +481,10 @@ Perks.Cooldowns.Desc=Verk\u00fcrzt die Cooldownzeit um {0}.
 Perks.ActivationTime.Name=Ausdauer
 Perks.ActivationTime.Desc=Erh\u00f6ht die Aktivierungszeit von F\u00e4higkeiten um {0} Sekunden.
 Perks.ActivationTime.Bonus=[[GOLD]] ({0}s with Endurance Perk)
-Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]Du hast durch den Tod [[BLUE]]{0}[[DARK_RED]] verloren.
-Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
-Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du hast [[BLUE]]{0}[[DARK_AQUA]] Level von [[YELLOW]]{1} [[DARK_AQUA]]gestohlen.
-Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
-Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
-Spout.Donate=[[YELLOW]][mcMMO] Donate!
-Spout.LevelUp.1=[[GREEN]]Level Up!
-Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
-Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
-Spout.Menu.ExitButton=EXIT
-Spout.Menu.HudButton.1=HUD Type: {0}
-Spout.Menu.HudButton.2=Change your HUD style!
-Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
-Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
 MOTD.Donate=[[DARK_AQUA]]Donation Info:
-MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
-MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
-MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
+MOTD.Hardcore.DeathStatLoss.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
+MOTD.Hardcore.Vampirism.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
 MOTD.PerksPrefix=[[RED]][mcMMO Perks]
-MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
 Smelting.Effect.0=Brennstoff Effektivit\u00e4t
