--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -2,24 +2,38 @@ Acrobatics.Combat.Proc=[[GREEN]]**Duckade**
 Acrobatics.Listener=Akrobatik:
 Acrobatics.SkillName=AKROBATIK
 Acrobatics.Skillup=[[YELLOW]]Akrobatikf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
+Archery.Effect.0=D\u00f6dsskott
+Archery.Effect.1=\u00d6kad skada med b\u00e5gar
+Archery.Effect.2=F\u00f6rvirra (Players)
+Archery.Effect.5=Chans f\u00f6r att \u00e5terta pilar fr\u00e5n kroppar
+Archery.Listener=B\u00e5gskytte:
 Archery.Skillup=[[YELLOW]]Pilskyttef\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
+Axes.Ability.Bonus.0=Yxm\u00e4stare
+Axes.Ability.Lower=[[GRAY]]**DU S\u00c4NKER FIN YXA**
+Axes.Combat.CritStruck=[[DARK_RED]]Du var KRITISKT skadad
 Axes.Combat.GI.Struck=[[RED]]**SLAGEN AV ST\u00d6RRE EFFEKT**
 Axes.Combat.SS.Length=[[RED]]Skallsplittrare l\u00e4ngd [[YELLOW]]{0}s
 Axes.Effect.3=Dubbel Skada
 Axes.Effect.5=L\u00e4gger till bonus skada
+Axes.SkillName=YXOR
 Axes.Skills.SS.On=[[GREEN]]**Skallsplittrare AKTIVERAD**
 Axes.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]Skallsplittrar [[GREEN]]f\u00f6rm\u00e5gan \u00e4r vederkvickad!
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]Skallsplittrare!
 Axes.Skillup=[[YELLOW]]Yxf\u00e4rdigheten har \u00f6kat med {0}. Totalt ({1})
+Excavation.Ability.Ready=[[GREEN]]**DU H\u00d6JER DIN SPADE**
 Excavation.Listener=Gr\u00e4vning:
 Excavation.SkillName=Gr\u00e4vning
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA BORR KROSSAREN AKTIVERAD**
 Excavation.Skillup=[[YELLOW]]Gr\u00e4vningsf\u00e4rdigheten har \u00f6kat med {0}. Totalt ({1})
 Fishing.Ability.TH.ItemFound=[[GRAY]]Skatt hittad!
+Fishing.Ability.TH.MagicFound=[[GRAY]] Du f\u00e5r en k\u00e4nsla av magi med denna f\u00e5ngst....
 Herbalism.Ability.GTh=[[GREEN]]**GR\u00d6NA FINGRAR**
+Herbalism.Ability.Ready=[[GREEN]]**DU H\u00d6JER DIN SKYFFEL**
 Herbalism.Listener=V\u00e4xtk\u00e4nnedom:
+Herbalism.Skills.GTe.Off=[[RED]]**Gr\u00f6na fingrar har avklingat**
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Dina[[YELLOW]]Gr\u00f6na fingrar  [[GREEN]]f\u00f6rm\u00e5ga \u00e4r vederkvickad!
 Herbalism.Skills.GTe.Other.Off=[[RED]Gr\u00f6na fingrar[GREEN]] har avklingat f\u00f6r [[YELLOW]]{0}
+Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]Gr\u00f6n Jord!
 Mining.Ability.Length=[[RED]]Superbrytarl\u00e4ngd: [[YELLOW]]{0}s
 Mining.Ability.Lower=[[GRAY]]**DU S\u00c4NKER DIN HACKA**
 Mining.Ability.Ready=[[GREEN]]**DU F\u00d6RBEREDER DIN HACKA**
@@ -28,7 +42,9 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]Supebrytning[[GREEN]] har avklingat 
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Din [[YELLOW]]Superbrytar [[GREEN]]f\u00f6rm\u00e5ga har uppdaterats!
 Mining.Skillup=[[YELLOW]]Hackf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
 Mining.Blast.Radius.Increase=[[RED]]\u00d6KNING AV SPR\u00c4NGNINGSRADIEN: [[YELLOW]]+{0}
-Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Explosionshacknings [[GREEN]]f\u00f6rm\u00e5ga \u00e4r fulladdad!
+Mining.Blast.Rank=[[RED]]Explosions Gruvdrift: [[YELLOW]] Grad {0}/8 [[GRAY]]({1})
+Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]Explosions Gruvdrift
+Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Explosionshacknings [[GREEN]]f\u00f6rm\u00e5ga har vederkvickas!
 Repair.Effect.0=Reparera
 Repair.Effect.2=Reparationsm\u00e4stare
 Repair.Effect.3=\u00d6kad reparationsm\u00e4ngd
@@ -52,10 +68,15 @@ Swords.Ability.Lower=[[GRAY]]**DU S\u00c4NKER DITT SV\u00c4RD**
 Swords.Ability.Ready=[[GREEN]]**DU G\u00d6R DIG REDO MED SV\u00c4RDET**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]F\u00f6rbl\u00f6dningen har [[GREEN]]stoppats[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**FIENDEN BL\u00d6DER**
+Swords.Combat.Counter.Hit=[[DARK_RED]]Tr\u00e4ff med en motattack
 Swords.Combat.Countered=[[GREEN]]**MOTATTACK**
 Swords.Combat.SS.Struck=[[DARK_RED]]Tr\u00e4ffad av S\u00c5GTANDAT SLAG:
+Swords.Effect.2=Bl\u00f6dande slag (ABILITY)
+Swords.Effect.4=S\u00e5gtandat slag bl\u00f6dning+
 Swords.Listener=Sv\u00e4rd:
+Swords.SkillName=SV\u00c4RD
 Swords.Skills.SS.On=[[GREEN]]**S\u00c5GTANDADE SLAG AKTIVERADE**
+Swords.Skills.SS.Refresh=[[GREEN]]Dina [[YELLOW]]Bl\u00f6dande slag [[GREEN]]har vederkvickas!
 Swords.Skills.SS.Other.Off=[[RED]]S\u00e5gtandat slag[[GREEN]] hat avklingat h\u00e4r f\u00f6r [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]S\u00e5gtandat slag!
 Taming.Ability.Bonus.2=Tjock P\u00e4ls
@@ -64,7 +85,11 @@ Taming.Effect.11=Explotionsskademinskning
 Taming.Effect.12=Det vildas rop
 Taming.Effect.13=Frammana ett djur till din sida
 Taming.Effect.14=[[GRAY]]COTW (Ocelot): Huka och v\u00e4nster-klicka med {0} Fisk i handen
+Taming.Effect.15=[[GRAY]]COTW (Wolf): Huka och v\u00e4sterklicka med {0} ett ben i handen
+Taming.Effect.16=Snabbmattj\u00e4nst.
+Taming.Effect.17=Chans f\u00f6r vargar att l\u00e4ka vid attak
 Taming.Listener.Wolf=[[DARK_GRAY]]din varg rusar tillbaka till dig...
+Taming.Listener=T\u00e4mja:
 Taming.Skillup=[[YELLOW]]T\u00e4mjningsf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk l\u00e4ngd: [[YELLOW]]{0}s
 Unarmed.Listener=Obev\u00e4pnad
@@ -74,9 +99,12 @@ Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED
 Woodcutting.Ability.0=L\u00f6vbl\u00e5sare
 Woodcutting.Ability.1=Bl\u00e5s bort l\u00f6v
 Woodcutting.SkillName=TR\u00c4DHUGGNING
+Woodcutting.Skills.TreeFeller.Off=[[RED]]**Tr\u00e4df\u00e4llning har avklingat**
 Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]Din [[YELLOW]]tr\u00e4df\u00e4llarkraft [[GREEN]]har vederkvickats!
 Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]tr\u00e5df\u00e4llning[[GREEN]] har avklingat f\u00f6r [[YELLOW]]{0}
+Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]Tr\u00e4d f\u00e4llare
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]DIN YXA SPLITTRAS I TUSEN BITAR!
+Woodcutting.Skillup=[[YELLOW]]Tr\u00e4dhuggningsf\u00e4rdigheten har \u00f6kat med {0}. Totalt ({1})
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
 Combat.BeastLore=[[GREEN]]**MONSTERKUNSKAP**
@@ -86,20 +114,25 @@ Commands.AdminChat.Off=Admin chatt endast [[RED]]Av
 Commands.AdminToggle=[[RED]]- V\u00e4xla admin chat
 Commands.Disabled=[[RED]]Det h\u00e4r kommandot \u00e4r avst\u00e4ngt.
 Commands.DoesNotExist=[[RED]]Spelaren finns inte i databasen!
+Commands.GodMode.Disabled=[[YELLOW]]mcMMO Gudsl\u00e4ge avaktiverat
 Commands.Invite.Accepted=[[GREEN]]F\u00f6rfr\u00e5gan accepterad. Du har nu g\u00e5tt med i gruppen {0}
 Commands.mcgod=[[RED]]- V\u00e4xla till gudsl\u00e4ge
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u00c4ndra m\u00e5l
 Commands.ModDescription=[[RED]]- L\u00e4s sammanfattad mod beskrivning. 
 Commands.Party.Accept=[[RED]]- Acceptera gruppinbjudan
+Commands.Party.Chat.Off=Endast Gruppchat  [[RED]]av.
 Commands.Party.Invite.0=[[RED]]VARNING: [[GREEN]]Du har f\u00e5tt en gruppinbjudan till {0} fr\u00e5n {1}
 Commands.Party.Kick=[[RED]]Du blev kickad fr\u00e5n gruppen {0}!
 Commands.Party.Leave=[[RED]]Du har l\u00e4mnat gruppen
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Kraftniv\u00e5[[YELLOW]]Leaderboard--
 Commands.PowerLevel=[[DARK_RED]]KRAFTNIV\u00c5: [[GREEN]]{0}
+Commands.ToggleAbility=[[RED]]- V\u00e4xla aktiv egenskap med h\u00f6gerklick.
+mcMMO.NoSkillNote=[[DARK_GRAY]]Om du inte har tillg\u00e5ng till en f\u00e4rdighet visas den inte h\u00e4r.
 Party.Player.Invalid=[[RED]]Det \u00e4r ingen giltlig spelare.
 Party.Teleport.Dead=[[RED]]Du kan inte teleportera dig till en d\u00f6d spelare.
 Party.Teleport.Target=[[GREEN]]{0} har teleporterat till dig.
 Party.Unlocked=[[GRAY]]Gruppen \u00e4r nu uppl\u00e5st
+Commands.XPGain.Axes=Anfallande monster
 Commands.XPGain.Excavation=Gr\u00e4va och hitta skatter
 Commands.XPGain.Fishing=Fiske (Ta reda p\u00e5 det!)
 Commands.XPGain.Herbalism=Sk\u00f6rda \u00f6rter
@@ -110,10 +143,11 @@ Commands.XPGain=[[DARK_GRAY]]XP \u00d6KAT: [[WHITE]]{0}
 Commands.xprate.proper.0=[[RED]]Riktigt anv\u00e4ndande f\u00f6r att \u00e4ndra XP graden \u00e4r /xprate <integer> <true/false>
 XPRate.Event=[[GOLD]]mcMMO \u00e4r f\u00f6rnuvarande med i ett XP evenemang! XP f\u00f6rh\u00e5llandet ligger p\u00e5 {0}x!
 Effects.Effects=EFFEKTER
-Guides.Excavation=[DARK_AQUA]]Om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vning \u00e4r n\u00e4r man gr\u00e4ver f\u00f6r att leta efter skatter.\n[[YELLOW]]Du hittar skatter genom att gr\u00e4va i marken.\n[[YELLOW]]Ju mer du g\u00f6r detta, desto fler skatter kommer du hitta.\n\n[[DARK_AQUA]]:XP \u00d6KNING\n[[YELLOW]]F\u00f6r att f\u00e5 XP m\u00e5ste du gr\u00e4va med en spade i din hand.\n[[YELLOW]]Man f\u00e5r bara XP av vissa material.\n[[DARK_AQUA]]Kompatibla Material:\n[[YELLOW]]Gr\u00e4s, Jord, Sand, Lera, Grus, Mycelium, Sj\u00e4lssand\n\n[[DARK_AQUA]]Hur du anv\u00e4nder Mega Gr\u00e4varen:\n[[YELLOW]]H\u00f6gerklicka med en spade i din hand.\n[[YELLOW]]N\u00e4r du har gjort det har du 4 sekunder p\u00e5 dig att\n[[YELLOW]]b\u00f6rja gr\u00e4va snabbt och aktivera\n[[YELLOW]] Mega Gr\u00e4varen.\n[[DARK_AQUA]]Vad \u00e4r Mega Gr\u00e4varen?\n[[YELLOW]]Mega Gr\u00e4varen \u00e4r en f\u00f6rm\u00e5ga med pauser\n[[YELLOW]]som \u00e4r till f\u00f6r Gr\u00e4vningsf\u00e4rdigheten\n[[YELLOW]]att hitta skatter och f\u00f6r att gr\u00e4va snabbare\n[[YELLOW]]p\u00e5 Gr\u00e4vningsmaterial\n\n[[DARK_AQUA]]Hur funkar Skatt Letare?\n[[YELLOW]]Varenda m\u00f6jliga skatt f\u00f6r Gr\u00e4vning kr\u00e4ver en viss\n[[YELLOW]]f\u00f6rm\u00e5gelevel  f\u00f6r att droppas, och som ett resultat \u00e4r det\n[[YELLOW]]sv\u00e5rt att s\u00e4ga hur mycket det hj\u00e4lper dig.\n[[YELLOW]]T\u00e4nk bara p\u00e5 att ju h\u00f6gre din Gr\u00e4vningsf\u00f6rm\u00e5ga\n[[YELLOW]]\u00e4r, desto fler skatter kan du hitta.\n[[YELLOW]]Kom ocks\u00e5 ih\u00e5g att varje gr\u00e4vnings-\n[[YELLOW]]kompatibelt material har en unik lista med olika skatter.\n[[YELLOW]]Det betyder att du kommer hitta andra saker i jord\n[[YELLOW]]\u00e4n vad du hittar i grus.\n[[DARK_AQUA]]Noteringar om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vnings droppar \u00e4r helt anpassningsbara\n[[YELLOW]]S\u00e5 resultatet varierar fr\u00e5n server till server.
+Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Item.ChimaeraWing.Pass=**CHIMAERA VINGE**
 Item.Injured.Wait=Du blev skadad f\u00f6r en liten stund sedan och m\u00e5ste v\u00e4nta med att anv\u00e4nda den h\u00e4r skillen. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]]Du har avv\u00e4pnats!
 Stats.Header.Combat=[[GOLD]]-=Stridsf\u00e4rdigheter=-
 Stats.Header.Gathering=[[GOLD]]-=SAMLA F\u00d6RM\u00c5GOR=-
 Stats.Header.Misc=[[GOLD]]-=Varierande F\u00e4rdogheter=-
+Stats.Own.Stats=[[GREEN]][mcMMO] Stats
