Subtract XP with Hardcore mode
Adds #1529

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -53,6 +53,7 @@ Version 1.4.07-dev
  ! Changed default XP multiplier for repairing shears
  ! Changed "Shake" drops for Witches. They no longer drop water bottles, since they no longer drop them in Vanilla.
  ! Changed fishing exploit prevention, by default it will no longer send global sounds, effects and messages.
+ ! Changed Hardcore modes, they will also subtract experience
  ! Changed various values to double in advanced.yml for the sake of consistency.
  ! Nerfed Fishing "Master Angler" (removed skill level based bonus) and also made the modifiers configurable
  ! Nerfed Archery damage to eliminate constant one-hit kills.
