Archery events & bugfixes
- Added custom events for Skill Shot and Daze.
- Archery metadata is now stored directly as a location, rather than a
string.
- Fixed bug where arrows weren't properly tracked.
- Use HashMap instead of ArrayList for entity tracking.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -51,6 +51,7 @@ Version 1.4.07
  + Added new /mccooldowns command to show all ability cooldowns
  + Commands may now both print text and display a scoreboard
  + Killing a custom entity will automatically add it to the custom entity config file with default values.
+ = Fixed bug where arrow retrieval was not properly detecting entities that already existed in the tracker
  = Fixed bug which allowed players to bypass fishing's exploit prevention
  = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
  = Fixed bug with "Skull Splitter" not finding the locale string
